...
        <View style={styles.heading}>
          <View style={styles.titleIcon}>
            <Icon name="chat" size={24} color={colors.primaryDark} />
          </View>
          <View style={styles.headingText}>
            <Text accessibilityRole="header" style={styles.title}>
              Conversas
            </Text>
            <Text style={styles.subtitle}>
              Caixa de entrada · {autor === 'PROFISSIONAL' ? 'Pacientes' : 'Profissionais'}
            </Text>
          </View>
        </View>
...
